--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "random-words": "^1.1.1",
     "uuid": "^8.3.2",
     "websocket": "^1.0.34"
   },
